--- a/maizuo/src/app/app.component.html
+++ b/maizuo/src/app/app.component.html
@@ -18,5 +18,7 @@
   </li>
 </ul>-->
 <app-header></app-header>
+<app-left></app-left>
 <app-scroll></app-scroll>
 <app-films></app-films>
+<app-movies></app-movies>
