--- a/maizuo/src/app/home/films/films.component.html
+++ b/maizuo/src/app/home/films/films.component.html
@@ -30,7 +30,7 @@
 				<span class="name">{{soon.name}}</span>
 			</div>
 			<div class="right col-xs-5">
-				<span>{{soon.premiereAt}}上映</span>
+				<span>{{soon.premiereAt|times}}上映</span>
 			</div>
 		</div>
 	</div>
