--- a/maizuo/src/app/commons/left/left.component.html
+++ b/maizuo/src/app/commons/left/left.component.html
@@ -1,3 +1,12 @@
-<p>
-  left works!
-</p>
+<div class="cover" (click)="clsMenu()" [@bgshow]='bgshow'>
+</div>
+<div  class="leftmenu" [@signal]='signal'>
+	<ul>
+		<li><a href=""><span>首页</span><span><img src="../../assets/img/right.png" alt="" /></span></a></li>
+		<li><a href=""><span>影片</span><span><img src="../../assets/img/right.png" alt="" /></span></a></li>
+		<li><a href=""><span>影院</span><span><img src="../../assets/img/right.png" alt="" /></span></a></li>
+		<li><a href=""><span>商城</span><span><img src="../../assets/img/right.png" alt="" /></span></a></li>
+		<li><a href=""><span>我的</span><span><img src="../../assets/img/right.png" alt="" /></span></a></li>
+		<li><a href=""><span>卖座卡</span><span><img src="../../assets/img/right.png" alt="" /></span></a></li>
+	</ul>
+</div>
