--- a/maizuo/src/app/home/films/films.component.css
+++ b/maizuo/src/app/home/films/films.component.css
@@ -34,7 +34,7 @@
 	width:100%;
 	text-align: center;
 	padding: 20px 0;
-	border-bottom: 1px solid darkgrey;
+	/*border-bottom: 1px solid darkgrey;*/
 }
 .more span{
 	display: inline-block;
@@ -46,6 +46,9 @@
 }
 .soons{
 	position: relative;
+	height:30px;
+	margin-top: 10px;
+	border-top: 1px solid darkgrey;
 }
 .soons span{
 	display: inline-block;
